feat: finish user info page

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -89,7 +89,13 @@
    -webkit-line-clamp: 2;
    overflow: hidden;
  }
-
+  button {
+    border:none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
+    height: 40px;
+  }
  .fl {
    float: left;
  }
